--- a/ecs-blue-green/action.yml
+++ b/ecs-blue-green/action.yml
@@ -55,16 +55,22 @@ runs:
 
     - name: Update Task Definition Image
       run: |
-         TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${{ inputs.task-definition }} --region ${{ inputs.aws-region }})
-         NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.taskDefinition) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt)| del(.deregisteredAt) | del(.registeredBy)' > task-def.json)
-         cat task-def.json
-         NEW_TASK_INFO=$(aws ecs register-task-definition --region ${{ inputs.aws-region }} --family "service" --container-definitions "[{\"name\":\"maria-dev-container\",\"image\":\"$NEW_ECR_IMAGE\",\"essential\":true}]" --cli-input-json file://task-def.json)
-         NEW_REVISION=$(echo $NEW_TASK_INFO | jq '.taskDefinition.revision')
+        TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition "service:158" --region "us-east-1")
+        NEW_ECR_IMAGE="${{ inputs.repo-uri }}:${{ inputs.image-tag }}"
+        echo $TASK_DEFINITION | jq --arg new_image "$NEW_ECR_IMAGE" '.taskDefinition.containerDefinitions[0].image = $new_image | del(.taskDefinitionArn) | del(.taskDefinition) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt)| del(.deregisteredAt) | del(.registeredBy)' > task-def.json
+        echo "Updated task-def.json"
+        cat task-def.json
+      shell: bash
+
+    - name: Register Task Definition 
+      run: |
+        REGISTERED_TASK_DEFINITION=$(aws ecs register-task-definition --cli-input-json file://task-def.json --region "us-east-1")
+        echo $REGISTERED_TASK_DEFINITION
       shell: bash
 
     - name: Deploy Primary Version
       run: |
-        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition "${{ inputs.task-definition }}:${NEW_REVISION}"
+        aws ecs update-service --cluster ${{ inputs.cluster-name }} --service ${{ inputs.service-name }} --task-definition "${{ inputs.task-definition }}:latest"
       shell: bash
 
     - name: Wait for Primary deployment to Stabilize
